[package]
name = "gnss-rtk"
version = "0.8.0"
license = "AGPL-3.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS position solver"
homepage = "https://github.com/nav-solutions/gnss-rtk"
repository = "https://github.com/nav-solutions/gnss-rtk"
keywords = ["timing", "positioning", "gps", "glonass", "galileo"]
categories = ["science", "science::geo"]
edition = "2024"
readme = "README.md"
exclude = [
    "examples_need_update/*",
]

[package.metadata]
msrv = "1.82"

[features]
default = []

serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde"
]

[dependencies.gnss-rs]
git = "https://github.com/nav-solutions/gnss"
rev = "dc4d4c2d413a3be90a3fa08a6ab29079eec13923"
features = ["std", "domes", "cospar", "sbas"]

[dependencies]
log = "0.4"
thiserror = "2"
nalgebra = "0.34"
itertools = "0.14"
polyfit-rs = "0.2"
anise = "0.8"
num-traits = "0.2"
hifitime = { version = "4", features = ["serde", "std"] }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
rstest = "0.25"
serde_json = "1"
env_logger = "0.11"
rand = { version = "0.9", features = ["small_rng"] }
anise = { version = "0.8", features = ["embed_ephem"] }

